tests/baselines/reference/taggedTemplateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpression.errors.txt
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpression.ts(4,31): error TS2322: Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpression.ts (1 errors) ====
    function foo(...rest: any[]) {
    }
    
    foo `${function (x: number) { x = "bad"; } }`;
                                  ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.